--- a/index.html
+++ b/index.html
@@ -58,14 +58,11 @@
 					<div class="content">
 						<header>
 							<h2>Importance of DeepLinks.</h2>
-							<p>Are you a CONTENT CREATOR or a SOCIAL MEDIA INFLURNCER? Then nothing else can be of more help.</p>
+							<p>Are you a CONTENT CREATOR or a SOCIAL MEDIA INFLURNCER? Then nothing else can be of more help. Because DeepLinks<br>
 						</header>
 						<ul class="actions">
-						<p>Deep links are an incredibly useful tool to interact with your customers outside of your platform.
-						For an example, imagine if you are a youtuber. And you want to bring audience from your social media to your channel.
-						Here you can use DeepLinks for the purpose, as it'll directly open up your Youtube channel, there by making it easy and quick for somebody who was just looking up your social media tp subscribe your channel!<br>
-						
-						This is just an example. That'd be nice right? But you don't know how to do that!? That's what we are here for.</p>
+						<p>Enhance The User Experience, Help Re-Engage Users, Enhance your discoverebility, And most importantly, it can
+						Strengthen Your Marketing, by taking your desired audience right where you want them. <br>Bt don't know how to do that!? That's what we are here for.</p>
 						</ul>
 					</div>
 				</section>
@@ -76,10 +73,9 @@
 					<div class="content">
 						<header>
 							<h2>We can do the job for you.</h2>
-							<p>We are a group of people who wants to help you improve in what you are doing.</p>
+							<p>No subscription, no bullshit.</p>
 						</header>
-						<p>So we don't have big automated web applications for this. What you can do is contact us, via the contact details given below,and we'll make sure to help you with what you want. See that's how simple it is.</p>
-						<p>No subscription or anything is required. Just a fair amount of 1$ per link is all needed. Just to keep us motivated. One more thing you can use the converted link for rest of your lives. As i said no subscription or bullshit. Just contact and we'll help out.</p>
+						<p>*  STEP1 :- Click the Whatsapp, IG or the Linkedin icon below to contact us.<br> *STEP2 :- Send us a hi :) and let us know how we can help. We'll surely reply.<br> * Step3 :- Then, you can share the link to be modified and continue to pay a sum of 2$.<br>													<br> * NB :- 2$ is our standard fee for converting a single link. <br>After all we are investing time for it right! This will keep us motivated, and help our lovely develpers buy a cup of cofee :)<br>And the work will be done! We work in real person. Face to face. We'll accept the paymemt, only after you are satisfied. So you can trust us completely.<br> Hope you'll utilise our help. </p>
 						<ul class="actions">
 						</ul>
 					</div>
