--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>welcome</title>
+		<title>viwstudios welcomes you.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -13,7 +13,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">viwstudios</a></h1>
+					<h1 id="logo"><a href="https://dplnk.page.link/Instagram">viwstudios</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -91,7 +91,7 @@
 					<ul class="icons">
 						<li><a href="https://wa.me/+917994673121"  target="_blank" class="icon brands alt fa-whatsapp"><span class="label">Whatsapp</span></a></li>
 						<li><a href="https://dplnk.page.link/LinkedIn"  target="_blank" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://dplnk.page.link/ig"  target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://dplnk.page.link/Instagram"  target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; All rights reserved.</li>
