--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<h2>We can do the job for you.</h2>
 							<p>No subscription, no bullshit.</p>
 						</header>
-						<p>*  STEP1 :- Click the Whatsapp, IG or the Linkedin icon below to contact us.<br> *STEP2 :- Send us a hi :) and let us know how we can help. We'll surely reply.<br> * Step3 :- Then, you can share the link to be modified.<br>  * STEP4 :- Continue to pay a sum of 2$  (per link.)<br> * NB :- 2$ is our standard fee for converting a single link. After all we are investing time for it right! This will keep us motivated, and help our lovely develpers buy a cup of cofee :)<br>And the work will be done! We work in real person. Face to face. We'll accept the paymemt, only after you are satisfied. So you can trust us completely.<br> Hope you'll utilise our help. </p>
+						<p>*  STEP1 :- Click the Whatsapp, IG or the Linkedin icon below to contact us.<br> *STEP2 :- Send us a hi :) and let us know how we can help. We'll surely reply.<br> * Step3 :- Then, you can share the link to be modified.<br>  * STEP4 :- Continue to pay a sum of 2$  (per link.)<br> * NB :- 2$ is our standard fee for converting a single link. After all we are investing time for it right! This is to keep us motivated, and help our lovely develpers buy a cup of cofee :)<br>And the work will be done! We work in real person. Face to face. We'll accept the paymemt, only after you are satisfied. So you can trust us completely.<br> Hope you'll utilise our help. </p>
 						<ul class="actions">
 						</ul>
 					</div>
