--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 									<p> *  The fundamental technology is just a feature of the smartphone’s operating system. </p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p> *  There by enabling customers to reach desired locations, without being dragged into unwanted locations.</p>
+									<p> *  There by enabling customers to reach desired locations, without being dragged into unwanted mess.</p>
 									<p> *  So what do you think? Can Deep Links be useful! Let's see :) </p>
 									
 								</div>
