--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>viwstudios welcomes you.</title>
+		<title>welcome</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -13,13 +13,14 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="https://dplnk.page.link/Instagram" target="_blank">viwstudios</a></h1>
+					<h1 id="logo"><a href="index.html">viwstudios</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="#one">About DeepLinks</a></li>
 							<li><a href="#two">Importance</a></li>
 							<li><a href="#three">About Us</a></li>
+							<li><a href="#four">Pricing</a></li>
 							<li><a href="#footer">Contact</a></li>
 						</ul>
 					</nav>
@@ -43,7 +44,7 @@
 									<p> *  The fundamental technology is just a feature of the smartphone’s operating system. </p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p> *  There by enabling customers to reach desired locations, without being dragged into unwanted mess.</p>
+									<p> *  There by enabling customers to reach desired, without being dragged into unwanted locations.</p>
 									<p> *  So what do you think? Can Deep Links be useful! Let's see :) </p>
 									
 								</div>
@@ -75,13 +76,26 @@
 							<h2>We can do the job for you.</h2>
 							<p>No subscription, no bullshit.</p>
 						</header>
-						<p>*  STEP1 :- Click the Whatsapp, IG or the Linkedin icon below to contact us.<br> *STEP2 :- Send us a hi :) and let us know how we can help. We'll surely reply.<br> * Step3 :- Then, you can share the link to be modified.<br>  * STEP4 :- Continue to pay a sum of 2$ (per link.), while we do the work.<br> * NB :- 2$ is our standard fee for converting a single link. After all we are investing time for it right! This is to keep us motivated, and help our lovely develpers buy a cup of cofee :)<br>And the work will be done! We work in real person. Face to face. We'll accept the payment, only after you are satisfied. So you can trust us completely.<br> Hope you'll utilise our help. </p>
+						<p>*  STEP1 :- Click the Whatsapp, IG or the Linkedin icon below to contact us.<br> *STEP2 :- Send us a hi :) and let us know how we can help. We'll surely reply.<br> * Step3 :- Then, you can share the link to be modified.<br>  * STEP4 :- Continue to pay a sum as per your chosen plan.<br> And the work will be done soon.</p>
 						<ul class="actions">
 						</ul>
 					</div>
 				</section>
 
-		
+			<!-- four -->
+			<section id="four" class="spotlight style2 right">
+				<span class="image fit main"><img src="images/17.jpg" alt="" /></span>
+				<div class="content">
+					<header>
+						<h2>Pricing</h2>
+						<p>You can decide how much you wanna pay, for what you need.</p>
+					</header>
+					<ul class="actions">
+					<p> * $1 per link.<br>
+					 * $2 for 3 links.<br>				<br>This is to keep us motivated, and help our lovely develpers buy a cup of cofee :)<br>And the work will be done! We work in real person. Face to face. We'll accept the paymemt, only after you are satisfied. So you can trust us completely.<br> Hope you'll utilise our help. </p>
+					</ul>
+				</div>
+			</section>
 
 			<!-- Footer -->
 				<footer id="footer">
@@ -91,7 +105,7 @@
 					<ul class="icons">
 						<li><a href="https://wa.me/+917994673121"  target="_blank" class="icon brands alt fa-whatsapp"><span class="label">Whatsapp</span></a></li>
 						<li><a href="https://dplnk.page.link/LinkedIn"  target="_blank" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://dplnk.page.link/Instagram"  target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://dplnk.page.link/ig"  target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; All rights reserved.</li>
