--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<li><a href="https://dplnk.page.link/ig"  target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; All rights reserved.</li>
+						<li>&copy; All rights reserved. By <a href="index.html">  viwstudios</a></li>
 					</ul>
 				</footer>
 
