--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				</header>
 
 
-			<!-- One -->
+			<!-- One 
 				<section id="one" class="spotlight style1 bottom">
 					<span class="image fit main"><img src="images/20.jpg" alt="" /></span>
 					<div class="content">
@@ -51,7 +51,7 @@
 							</div>
 						</div>
 					</div>
-				</section>
+				</section>-->
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
@@ -59,7 +59,7 @@
 					<div class="content">
 						<header>
 							<h2>Importance of DeepLinks.</h2>
-							<p>Are you a CONTENT CREATOR or a SOCIAL MEDIA INFLURNCER? Then nothing else can be of more help. Because DeepLinks<br>
+							<p>Are you a CONTENT CREATOR or a SOCIAL MEDIA INFLURNCER? Then nothing else can be of more help. Because our service help you,<br>
 						</header>
 						<ul class="actions">
 						<p>Enhance The User Experience, Help Re-Engage Users, Enhance your discoverebility, And most importantly, it can
