--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<span class="image fit main"><img src="images/19.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Importance of DeepLinks.</h2>
+							<h2>Importance of this.</h2>
 							<p>Are you a CONTENT CREATOR or a SOCIAL MEDIA INFLURNCER? Then nothing else can be of more help. Because our service help you,<br>
 						</header>
 						<ul class="actions">
